--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,20 +1,27 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".Home">
 
     <TextView
-        android:text="@string/welcome"
+        style="@style/header"
         android:textSize="30dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
-        android:textAlignment="center" />
+        android:text="@string/welcome" />
 
-</RelativeLayout>
+    <Button
+        style="@style/button"
+        android:text="@string/findMyFriendButtonText"
+        android:onClick="findMyFriendActivity" />
+
+    <Button
+        style="@style/button"
+        android:text="@string/friendFindMeButtonText" />
+
+    <Button
+        style="@style/button"
+        android:text="@string/meetHalfwayButtonText" />
+
+</LinearLayout>
