--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:padding="@dimen/activity_vertical_margin"
     tools:context=".Home">
 
     <TextView
@@ -18,7 +18,8 @@
 
     <Button
         style="@style/button"
-        android:text="@string/friendFindMeButtonText" />
+        android:text="@string/friendFindMeButtonText"
+        android:onClick="friendFindMeActivity" />
 
     <Button
         style="@style/button"
