--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,9 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/AppPrimaryColor</item>
+        <item name="colorPrimaryDark">@color/AppPrimaryDarkColor</item>
+        <item name="colorAccent">@color/AppSecondaryColor</item>
     </style>
 
     <style name="header">
@@ -17,6 +19,7 @@
 
     <style name="button">
         <item name="android:background">@drawable/button</item>
+        <item name="android:textAllCaps">false</item>
         <item name="android:layout_marginLeft">10dp</item>
         <item name="android:layout_marginRight">10dp</item>
         <item name="android:layout_marginTop">60dp</item>
@@ -24,5 +27,10 @@
         <item name="android:layout_gravity">center</item>
         <item name="android:layout_height">60dp</item>
     </style>
+
+    <color name="AppPrimaryColor">#4CAF50</color>
+    <color name="AppPrimaryDarkColor">#388E3C</color>
+    <color name="AppSecondaryColor">#2196F3</color>
+    <color name="AppSecondaryDarkColor">#1976D2</color>
 
 </resources>
