Updated Android Studio to 1.4, Added IntentExtras class

--- a/app/src/main/res/layout/activity_find_my_friend.xml
+++ b/app/src/main/res/layout/activity_find_my_friend.xml
@@ -8,8 +8,7 @@
 
     <TextView
         style="@style/header"
-        android:text="@string/findMyFriendDescription"
-        android:textSize="20dp" />
+        android:text="@string/findMyFriendDescription" />
 
     <EditText
         android:id="@+id/code"
