--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,7 @@
     </style>
 
     <style name="header">
+        <item name="android:textSize">18sp</item>
         <item name="android:paddingTop">5dp</item>
         <item name="android:paddingBottom">5dp</item>
         <item name="android:layout_width">fill_parent</item>
@@ -19,6 +20,8 @@
 
     <style name="button">
         <item name="android:background">@drawable/button</item>
+        <item name="android:textColor">#222222</item>
+        <item name="android:textSize">17sp</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:layout_marginLeft">10dp</item>
         <item name="android:layout_marginRight">10dp</item>
