Location Service now correctly receives user's Location. Home Activity now saves instance data on app exit and reuses it on app resume. New Callback for activities when location gets updated (used to update UI, or testing reasons)

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,8 +7,9 @@
     tools:context=".Home">
 
     <TextView
+        android:id="@+id/welcomeToFindMeText"
         style="@style/header"
-        android:textSize="30dp"
+        android:textSize="25dp"
         android:text="@string/welcome" />
 
     <Button
