Map now displays current location. The Location Service is looking a lot better, now correctly gets your location, and will NOT allow you to use the app until you activate location services.

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -24,6 +24,7 @@
 
     <Button
         style="@style/button"
-        android:text="@string/meetHalfwayButtonText" />
+        android:text="@string/meetHalfwayButtonText"
+        android:onClick="meetHalfwayActivity" />
 
 </LinearLayout>
